chore: Modify html title and slide z-index issue

--- a/web_design_qnet/E4/styles/main.css
+++ b/web_design_qnet/E4/styles/main.css
@@ -262,6 +262,7 @@
         width: 100%;
         height: 100%;
         position: absolute;
+        z-index: 1;
         left: 0;
         top: 0;
         display: block;
